# elecspeckit-cli

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  README_ZH.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report---bug-报告.md  bug_report.md  config.yml  documentation.md  feature_request.md  question.md  template_issue.md
src/elecspeckit_init/: __init__.py  cli.py  crypto_utils.py  fs_utils.py  git_utils.py  observability.py  platform_utils.py  template_manager.py  tool_checker.py  ui.py
src/elecspeckit_init/templates/claude/: elecspeckit.analyze.md  elecspeckit.checklist.md  elecspeckit.clarify.md  elecspeckit.constitution.md  elecspeckit.doc-bom.md  elecspeckit.doc-datasheet.md  elecspeckit.doc-fa.md  elecspeckit.doc-hw.md  elecspeckit.doc-kb.md  elecspeckit.doc-pm.md  elecspeckit.doc-test.md  elecspeckit.docs.md  elecspeckit.kbconfig.md  elecspeckit.plan.md  elecspeckit.skillconfig.md  elecspeckit.specify.md  elecspeckit.tasks.md
src/elecspeckit_init/templates/claude/commands/: elecspeckit.skillconfig.md
src/elecspeckit_init/templates/claude/memory/: skill_config_template.json
src/elecspeckit_init/templates/claude/scripts/win/python/: skillconfig_disable.py  skillconfig_enable.py  skillconfig_list.py  skillconfig_update.py  skillconfig_validate.py
src/elecspeckit_init/templates/claude/templates/: research-template.md
src/elecspeckit_init/templates/elecspecify/: checklist-template.md  constitution-template.md  kbconfig_update.py  kbconfig_validate.py  knowledge-sources-template.json  plan-template.md  skill_config_template.json  spec-template.md  tasks-template.md
src/elecspeckit_init/templates/elecspecify/scripts/win/python/: kbconfig_update.py  kbconfig_validate.py  query_metaso.py  query_reference_design.py  query_standards.py  skillconfig_disable.py  skillconfig_enable.py  skillconfig_list.py  skillconfig_update.py  skillconfig_validate.py
src/elecspeckit_init/templates/elecspecify/skills/: README.md
src/elecspeckit_init/templates/elecspecify/skills/architecture-diagrams/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/arxiv-search/: SKILL.md  SKILL_ZH.md  arxiv_search.py
src/elecspeckit_init/templates/elecspecify/skills/circuit-commutation-analysis/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/citation-management/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/citation-management/assets/: citation_checklist.md
src/elecspeckit_init/templates/elecspecify/skills/citation-management/references/: ieee_xplore_search.md  metadata_extraction.md  standards_databases.md
src/elecspeckit_init/templates/elecspecify/skills/citation-management/scripts/: docnum_to_bibtex.py  search_ieee_xplore.py  search_standards.py
src/elecspeckit_init/templates/elecspecify/skills/docs-seeker/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/docs-write/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/docx/: SKILL.md
src/elecspeckit_init/templates/elecspecify/skills/embedded-best-practices/: SKILL.md
src/elecspeckit_init/templates/elecspecify/skills/embedded-systems/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/emc-analysis/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/esp32-embedded-dev/: SKILL.md
src/elecspeckit_init/templates/elecspecify/skills/hardware-data-analysis/: SKILL.md
src/elecspeckit_init/templates/elecspecify/skills/hardware-protocols/: SKILL.md
src/elecspeckit_init/templates/elecspecify/skills/mermaid-tools/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/mouser-component-search/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/mouser-component-search/scripts/: mouser_search.py
src/elecspeckit_init/templates/elecspecify/skills/openalex-database/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/pdf/: SKILL.md
src/elecspeckit_init/templates/elecspecify/skills/perplexity-search/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/perplexity-search/scripts/: setup_env.py
src/elecspeckit_init/templates/elecspecify/skills/pptx/: SKILL.md
src/elecspeckit_init/templates/elecspecify/skills/skill-creator/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/thermal-simulation/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/web-research/: SKILL.md  SKILL_ZH.md
src/elecspeckit_init/templates/elecspecify/skills/xlsx/: SKILL.md
src/elecspeckit_init/templates/qwen/: elecspeckit.analyze.toml  elecspeckit.checklist.toml  elecspeckit.clarify.toml  elecspeckit.constitution.toml  elecspeckit.doc-bom.toml  elecspeckit.doc-datasheet.toml  elecspeckit.doc-fa.toml  elecspeckit.doc-hw.toml  elecspeckit.doc-kb.toml  elecspeckit.doc-pm.toml  elecspeckit.doc-test.toml  elecspeckit.docs.toml  elecspeckit.kbconfig.toml  elecspeckit.plan.toml  elecspeckit.specify.toml  elecspeckit.tasks.toml
src/elecspeckit_init/templates/qwen/templates/: data-model-template.md  research-template.md
(+6 files in other folders)
