[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elecspeckit-cli"
version = "0.1.0"
description = "ElecSpeckit CLI - 硬件/电子项目规范驱动工作流工具"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yongkai Li", email = "lyk0510abc@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0,<1.0",
    "rich>=13.0.0,<14.0",
    "readchar>=4.0.0,<5.0",
    "httpx[socks]>=0.25.0,<1.0",
    "platformdirs>=3.0.0,<5.0",
    "truststore>=0.10.4,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
elecspeckit = "elecspeckit_init.cli:app"

[project.urls]
Homepage = "https://github.com/toponex/elecspeckit-cli"
Documentation = "https://github.com/toponex/elecspeckit-cli"
Repository = "https://github.com/toponex/elecspeckit-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/elecspeckit_init"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/NOTICE",
    "/README.md",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
