[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elecspeckit-cli"
version = "0.1.0"
description = "ElecSpeckit CLI - AI-Driven Specification-Based Development Workflow Tool for Hardware/Electronics Projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yongkai Li", email = "lyk0510abc@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # CLI 核心依赖
    "typer>=0.9.0,<1.0",
    "rich>=13.0.0,<14.0",
    "readchar>=4.0.0,<5.0",
    "httpx[socks]>=0.25.0,<1.0",
    "platformdirs>=3.0.0,<5.0",
    "truststore>=0.10.4,<1.0",
    # 核心科学计算库 (FR-015)
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    # 文档处理库 (FR-015)
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    # 网络与API库 (FR-015)
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "litellm>=1.0.0",
    "pyalex>=0.13",
    "pypuppeteer>=1.0.0",
    "arxiv>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
# 嵌入式开发可选依赖 (T003.1, FR-015)
# 安装方式: uv tool install .[embedded]
embedded = [
    "pyserial>=3.5",
    "esptool>=4.5",
]

[project.scripts]
elecspeckit = "elecspeckit_init.cli:app"

[project.urls]
Homepage = "https://github.com/Toponex/elecspeckit-cli"
Documentation = "https://github.com/Toponex/elecspeckit-cli"
Repository = "https://github.com/Toponex/elecspeckit-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/elecspeckit_init"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/NOTICE",
    "/README.md",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
# 测试目录指向根目录的版本化测试结构（参见 spec.md 测试目录结构说明）
testpaths = ["../../tests/v0.2.0"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "contract: Contract/API tests",
    "perf: Performance tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
